Fixes an issue where the legend would overlap the content on mobile

--- a/src/scss/_explore.scss
+++ b/src/scss/_explore.scss
@@ -470,7 +470,7 @@ a.explore--map-button {
   z-index: $z-index-1;
   display: none;
 
-  position: absolute;
+  position: fixed;
   bottom: 26px;
   right: 10px;
 
